jeager/base/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jaeger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: jaeger
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          ports:
            - containerPort: 5775   # UDP for agent
            - containerPort: 6831   # UDP for agent
            - containerPort: 6832   # UDP for agent
            - containerPort: 5778   # HTTP for agent
            - containerPort: 16686  # HTTP for UI
            - containerPort: 14268  # HTTP for collector
            - containerPort: 14250  # GRPC for collector
            - containerPort: 9411   # HTTP for Zipkin
            - containerPort: 4317   # GRPC for OpenTelemetry (OTLP)
            - containerPort: 4318   # HTTP for OpenTelemetry (OTLP)
          volumeMounts:
            - name: badger-storage
              mountPath: /badger
      volumes:
        - name: badger-storage
          persistentVolumeClaim:
            claimName: jaeger-pvc
