jeager/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jeager-ricearaul-com-ingressroute
  namespace: jeager
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jeager.ricearaul.com`)
      priority: 10
      services:
        - name: jeager-ui-service
          port: 80
  tls:
    secretName: jeager-ricearaul-com-certificate-secret
